delete change password

--- a/src/app/admin/admin-main/admin-main.component.html
+++ b/src/app/admin/admin-main/admin-main.component.html
@@ -114,14 +114,14 @@
               </div>
             </button>
 
-            <button ngbDropdownItem class="drop" (click)="resetPassword()">
+            <!-- <button ngbDropdownItem class="drop" (click)="resetPassword()">
               <div style="display: flex; align-items: center">
                 <div class="db_user">
                   <div class="db_password"></div>
                 </div>
                 <div>{{ "login.reset_password_new" | translate }}</div>
               </div>
-            </button>
+            </button> -->
 
             <button
               ngbDropdownItem
