--- a/src/app/main/contract/contract.component.scss
+++ b/src/app/main/contract/contract.component.scss
@@ -250,4 +250,9 @@
 .img_icon:hover{
   width: 30px;
 }
-
+.calendar_create, .calendar_deadline, .item_icon{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
