--- a/src/app/main/contract-template/contract-template.component.html
+++ b/src/app/main/contract-template/contract-template.component.html
@@ -39,20 +39,18 @@
   </div>
 
   <div class="item_contract" *ngFor="let item of contractsTemplate  | paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal}">
-    <div class="row">
-      <div class="col-md-12 item_contract_name" (click)="isQLMHD_08?openDetail(item.id):null">{{item.name}}</div>
-    </div>
-    <div class="row">
-      <div class="col-md-12 item_contract_infor">Bên A: {{item.sideA}}</div>
-    </div>
+    
     <div class="row">
       <div class="col-md-5">
         <div class="row">
-          <div class="col-md-12 item_contract_infor">Bên B: {{item.sideB}}</div>
+          <div class="col-md-12 item_contract_name" (click)="isQLMHD_08?openDetail(item.id):null">{{item.name}}</div>
+        </div>
+        <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
+          <div class="col-md-12 item_contract_infor">Bên {{getNameOrganization(itemPar, index)}}</div>
         </div>
       </div>
       <div class="col-md-2 calendar_create">
-        <i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.created_at | date: 'dd/MM/yyyy HH:mm'}}</span>
+        <div><i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.created_at | date: 'dd/MM/yyyy HH:mm'}}</span></div>
       </div>
 
       <div class="col-md-2 contract_code">
