--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -21,17 +21,15 @@
     </div>
 
     <div class="item_contract" *ngFor="let item of contracts | paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal}">
-      <div class="row">
-        <div class="col-md-12 item_contract_name" (click)="isQLHD_07?openDetail(item.id):null">{{item.name}}</div>
-      </div>
-      <div class="row">
-        <div class="col-md-12 item_contract_infor">{{'contract.side.a' | translate}}: {{item.sideA}}</div>
-      </div>
-      <div class="row">
-        <div class="col-md-12 item_contract_infor">{{'contract.side.b' | translate}}: {{item.sideB}}</div>
-      </div>
+      
       <div class="row">
         <div class="col-md-5">
+          <div class="row">
+            <div class="col-md-12 item_contract_name" (click)="isQLHD_07?openDetail(item.id):null">{{item.name}}</div>
+          </div>
+          <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
+            <div class="col-md-12 item_contract_infor">Bên {{getNameOrganization(itemPar, index)}}</div>
+          </div>
           <div class="row">
             <div class="col-md-12 item_contract_infor">{{'contract.status' | translate}}:
               <span class="status_blue">{{item.status | pipe | translate}}</span>
@@ -39,11 +37,11 @@
           </div>
         </div>
         <div class="col-md-2 calendar_create">
-          <i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.created_at | date: 'dd/MM/yyyy HH:mm'}}</span>
+          <div><i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.created_at | date: 'dd/MM/yyyy HH:mm'}}</span></div>
         </div>
 
         <div class="col-md-2 calendar_deadline">
-          <i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.sign_time | date: 'dd/MM/yyyy'}}</span>
+          <div><i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.sign_time | date: 'dd/MM/yyyy'}}</span></div>
         </div>
 
         <div class="col-md-3 item_icon">
