--- a/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.scss
+++ b/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.scss
@@ -14,6 +14,10 @@
   color: #106DB6;
 }
 
+.font-style {
+  font-size: 11px !important;
+}
+
 #input-text-value, #input-number-value {
   width: 100%;
   background-color: rgb(235, 248, 255);
