--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -110,6 +110,9 @@
       <div class="skeleton-sign position-absolute opacity-0">
         <app-text-signature-image [textSign]="textSign" [height]="heightText" [width]="widthText"></app-text-signature-image>
       </div>
+      <div class="skeleton-sign position-absolute opacity-0">
+        <app-display-signature-image [phoneOtp]="phoneOtp"></app-display-signature-image>
+      </div>
     </div>
   </div>
 </div>
