--- a/src/app/main/user/infor-user/infor-user.component.html
+++ b/src/app/main/user/infor-user/infor-user.component.html
@@ -47,7 +47,7 @@
             [maxDate]="maxDate"
             [showIcon]="true"
             dateFormat="dd/mm/yy"
-            [readonlyInput]="true"
+            placeholder="dd/MM/yyyy"
           ></p-calendar>
         </div>
       </div>
