--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -29,7 +29,7 @@
         <div class="col-md-4">
           <div class="label text-color">{{'user.birthday' | translate}}</div>
           <div>
-            <p-calendar formControlName="birthday" [maxDate]="maxDate" [showIcon]="true" dateFormat="dd/mm/yy" [readonlyInput]="true"></p-calendar>
+            <p-calendar formControlName="birthday" [maxDate]="maxDate" [showIcon]="true" dateFormat="dd/mm/yy" placeholder="dd/MM/yyyy"></p-calendar>
           </div>
         </div>
       </div>
