--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -111,7 +111,7 @@
         <app-text-signature-image [textSign]="textSign" [height]="heightText" [width]="widthText"></app-text-signature-image>
       </div>
       <div class="skeleton-sign position-absolute opacity-0">
-        <app-display-signature-image [phoneOtp]="phoneOtp"></app-display-signature-image>
+        <app-display-signature-image [userOtp]="userOtp" [phoneOtp]="phoneOtp" [isDateTime]="isDateTime"></app-display-signature-image>
       </div>
     </div>
   </div>
