--- a/src/app/main/contract-signature/display-signature-image/display-signature-image.component.html
+++ b/src/app/main/contract-signature/display-signature-image/display-signature-image.component.html
@@ -1,8 +1,9 @@
 <div class="signature-container" id="export-signature-image-html"
-     style="width: 155px;min-height: 40px; display: flex; font-size: 9px">
+     style="width: 140px;min-height: 30px; display: flex; font-size: 10px">
   <div class="signature-content"
-       style="margin-left: 6px; color: #70BBF5; background:url('assets/img/tick_signature.svg') no-repeat center; background-size: 40px 30px">
-    <div style="z-index: 2">Ngày ký: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
-    <div style="z-index: 2">SĐT: {{phoneOtp}}</div>
+       style="margin-left: 6px; color: #0872C9;line-height: 10px; background:url('assets/img/tick_signature.svg') no-repeat center; background-size: 40px 30px">
+    <div style="z-index: 2; text-align: left;">Người ký: {{userOtp}}</div>
+    <div style="z-index: 2; text-align: left;">Ngày ký: {{isDateTime}}</div>
+    <div style="z-index: 2; text-align: left;">SĐT: {{phoneOtp}}</div>
   </div>
 </div>
