--- a/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
+++ b/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
@@ -21,15 +21,15 @@
       <div class="select-file-contract">
         <div class="file-approve">
           <div class="label_item">{{'file.attach' | translate}}</div>
-          
+
           <input id="attachFile" type="file" accept=".pdf, .doc, .docx" (change)="uploadFileAttachForm($event)"
             style="display: none;" multiple />
 
           <div class="select-contract">
             <div class="div_file_attach">
-              <div *ngIf="!this.datasForm.fileAttachForm || this.datasForm.fileAttachForm.length == 0" style="color:gray">{{'choose.contract.file.attach' |
+              <div *ngIf="!datasForm.fileAttachForm || datasForm.fileAttachForm.length == 0" style="color:gray">{{'choose.contract.file.attach' |
                 translate }}</div>
-              <div *ngFor="let item of this.datasForm.fileAttachForm; let i = index" style="width: 80%;">
+              <div *ngFor="let item of datasForm.fileAttachForm; let i = index" style="width: 80%;">
                 {{item.filename ? item.filename : item.name}} <img *ngIf="item" style="cursor: pointer;" (click)="deleteFileAttach(item, i)"
                   src="../../../../../../assets/img/icon_close.svg"></div>
             </div>
