--- a/src/app/main/contract-signature/components/consider-contract/confirm-sign-otp/confirm-sign-otp.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/confirm-sign-otp/confirm-sign-otp.component.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="select-option">
-      <button class="dx-button-form dx-button-close dx-button-90" (click)="sendOtp(this.datas.contract_id, this.datas.recipient_id, this.datas.phone)" type="button">Gửi lại OTP</button>
+      <button class="dx-button-form dx-button-close dx-button-90" *ngIf="this.count == 0" (click)="sendOtp(this.datas.contract_id, this.datas.recipient_id, this.datas.phone)" type="button">Gửi lại OTP</button>
       <button class="dx-button-form dx-button-close dx-button-90" (click)="onSubmit()" type="button">Xác nhận</button>
     </div>
   </form>
