--- a/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
+++ b/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
@@ -1,21 +1,35 @@
 <div class="container-fluid">
   <div style="text-align: center; font-weight: bold">
-    <h3 style="color: #106DB6;" (click)="t()">{{this.datas.title}}</h3>
+    <h3 style="color: #106DB6;font-family: inherit;" (click)="t()">{{this.datas.title}}</h3>
   </div>
   <form (ngSubmit)="onSubmit()" [formGroup]="myForm" class="content">
     <div class="name-item">
-      <div class="label_item">Họ tên: <span class="require_star">*</span></div>
-      <div class="form-control input-line">
+      <div class="label_item">Họ tên <span class="require_star">*</span></div>
+      <div class="input-data">
         <img src="assets/img/icon_name.svg" class="input-img">
-        <input style="width: 88%" autocomplete="off" type="text" formControlName="name" class="input-text" placeholder="Nhập họ và tên" autofocus>
+        <input style="width: 88%" autocomplete="off" type="text" formControlName="name" class="input-text" autofocus>
       </div>
     </div>
 
     <div class="name-item">
-      <div class="label_item">Email: <span class="require_star">*</span></div>
-      <div class="form-control input-line">
+      <div class="label_item">Email <span class="require_star">*</span></div>
+      <div class="input-data">
         <img src="assets/img/login_email.svg" class="input-img">
-        <input style="width: 88%" autocomplete="off" type="text" formControlName="email" class="input-text" placeholder="Nhập Email">
+        <input style="width: 88%" autocomplete="off" type="text" formControlName="email" class="input-text">
+      </div>
+    </div>
+
+    <div class="name-item">
+      <div class="label_item">Số điện thoại <span *ngIf="isReqPhone" class="require_star">*</span></div>
+      <div class="input-data">
+        <input style="width: 88%" autocomplete="off" type="text" formControlName="phone" class="input-text">
+      </div>
+    </div>
+
+    <div class="name-item" *ngIf="isReqCardId">
+      <div class="label_item">CMT/CCCD <span class="require_star">*</span></div>
+      <div class="input-data">
+        <input style="width: 88%" autocomplete="off" type="text" formControlName="card_id" class="input-text">
       </div>
     </div>
 
