--- a/src/app/main/contract-type/add-contract-type/add-contract-type.component.html
+++ b/src/app/main/contract-type/add-contract-type/add-contract-type.component.html
@@ -11,7 +11,7 @@
                 </div>
                 <div *ngIf="submitted && f.code.errors" class="invalid">
                     <div *ngIf="f.code.errors.required">{{'error.contract-type.code.required' | translate}}</div>
-                    <div *ngIf="f.code.errors.pattern">{{'Mã loại hợp đồng không được chứa ký tự đặc biệt' | translate}}</div>
+                    <div *ngIf="f.code.errors.pattern">{{'Mã loại hợp đồng không được chứa ký tự đặc biệt, ký tự có dấu' | translate}}</div>
                 </div>
             </div>
         </div>
