--- a/src/app/main/role/add-role/add-role.component.html
+++ b/src/app/main/role/add-role/add-role.component.html
@@ -31,7 +31,7 @@
                         </div>
                         <div *ngIf="submitted && f.code.errors" class="invalid">
                             <div *ngIf="f.code.errors.required">{{'error.role.code.required' | translate}}</div>
-                            <div *ngIf="f.code.errors.pattern">{{'Mã vai trò không được chứa ký tự đặc biệt' | translate}}</div>
+                            <div *ngIf="f.code.errors.pattern">{{'Mã vai trò không được chứa ký tự đặc biệt, ký tự có dấu' | translate}}</div>
                         </div>
                     </div>
                 </div>
