--- a/src/app/admin/admin-main/admin-unit/admin-add-unit/admin-add-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-add-unit/admin-add-unit.component.html
@@ -140,7 +140,7 @@
     
         <div class="row" style="justify-content: center;padding-top: 10px;">
             <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.cancel' | translate}}</button>
-            <button class="save-button" (click)="onSubmit()">{{'btn.add' | translate}}</button>
+            <button class="save-button" (click)="onSubmit()">{{'btn.save' | translate}}</button>
         </div>
     </form>
   </div>
