--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.scss
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.scss
@@ -28,6 +28,16 @@
   padding-left: 16px;
 }
 
+.label_detail {
+  font-weight: 500;
+  color: #0160AE;
+  background-color: #C7D0E9;
+  height: 40px;
+  border-radius: 10px 10px 0 0;
+  display: flex;
+  align-items: center;
+}
+
 .label_item {
   padding: 12px 0px 3px;
   color: #5e5e5e;
@@ -202,6 +212,9 @@ input[type=number] {
   padding-left: 10px;
   outline: 0;
   font-size: 14px;
+}
+input[type="checkbox"] {
+  cursor: pointer;
 }
 
 // defind json data follow backend
