--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -440,12 +440,12 @@
                   </div>
                 </div>
               </div>
-              <div *ngIf="getPartnerSignature(item).length > 1 || this.getPartnerCoordination(item).length > 0"
+              <div *ngIf="getPartnerSignature(item).length > 1 || getPartnerCoordination(item).length > 0"
                 class="col-md-1 delete-element" (click)="deletePartnerSignature(index, item)">
                 <img src="assets/img/border_close.svg" alt="close.vn">
                 <img class="close-btn" src="assets/img/x_close.svg" alt="close.vn">
               </div>
-              <div *ngIf="getPartnerSignature(item).length == 1 && this.getPartnerCoordination(item).length == 0"
+              <div *ngIf="getPartnerSignature(item).length == 1 && getPartnerCoordination(item).length == 0"
                 class="col-md-1 delete-element"></div>
             </div>
             <div class="participants--add">
