edit code ordering

--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -629,7 +629,7 @@
   </div>
 </div>
 
-<!-- xoa doi tac -->
+<!-- them doi tac -->
 <div style="display: flex">
   <div style="margin-right: 80px"></div>
   <div style="display: inline-block; cursor: pointer">
