--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/contract-header/contract-header.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/contract-header/contract-header.component.html
@@ -20,5 +20,5 @@
       </li>
     </ul>
   </div>
-  <!-- <div style="font-size: 20px;color: red; padding: 20px 20px 0 0;">{{counter$ | async }}</div> -->
+  <div style="font-size: 20px;color: red; padding: 20px 20px 0 0;">{{counter$ | async }}</div>
 </div>
