--- a/src/app/main/contract-signature/components/consider-contract/confirm-sign-otp/confirm-sign-otp.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/confirm-sign-otp/confirm-sign-otp.component.html
@@ -15,11 +15,12 @@
       <div *ngIf="submitted && f.otp.errors" class="invalid">
         <div *ngIf="f.otp.errors.required">{{'Mã OTP không được để trống' | translate}}</div>
       </div>
-      <div class="label-input-otp-sent">Mã OTP hết hạn sau {{counter$ | async }}s</div>
+      <div class="label-input-otp-sent" style="margin-left: 100px;" *ngIf="this.count > 0">Mã OTP hết hạn sau {{counter$ | async }}s</div>
+      <div class="label-input-otp-sent" style="margin-left: 150px;" *ngIf="this.count == 0">Mã OTP đã hết hạn</div>
     </div>
 
     <div class="select-option">
-      <button class="dx-button-form dx-button-close dx-button-90" *ngIf="this.count == 0" (click)="sendOtp(this.datas.contract_id, this.datas.recipient_id, this.datas.phone)" type="button">Gửi lại OTP</button>
+      <button class="dx-button-form dx-button-close dx-button-90" [ngStyle]="getStyleReset()" (click)="this.count == 0?sendOtp(this.datas.contract_id, this.datas.recipient_id, this.datas.phone):''" type="button">Gửi lại OTP</button>
       <button class="dx-button-form dx-button-close dx-button-90" (click)="onSubmit()" type="button">Xác nhận</button>
     </div>
   </form>
