--- a/src/app/admin/admin-main/admin-unit/admin-detail-unit/admin-detail-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-detail-unit/admin-detail-unit.component.html
@@ -121,7 +121,7 @@
             <span *ngIf="list.usageStatus == 'CANCELED'">Đã huỷ</span>
           </td>
           <td style="text-align: center">
-            <img
+            <img *ngIf="list.usageStatus == 'NOT_USED'"
             (click)="editUnitPack(list.serviceId)"
               src="../../../assets/img/icon_edit.svg"
               width="20px"
