rb otp consider

--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -111,7 +111,7 @@
   </div>
 </div>
 <app-footer-signature *ngIf="loaded" [datas]="datas" [view]="[2,3].includes(recipient.status)" [recipientId]="recipientId" (submitChanges)="submitEvents($event)"></app-footer-signature>
-<app-confirm-sign-otp (confirmOtpForm)="confirmOtp($event)"></app-confirm-sign-otp>
+<!-- <app-confirm-sign-otp (confirmOtpForm)="confirmOtp($event)"></app-confirm-sign-otp> -->
 <ngx-spinner
   bdColor="rgba(51,51,51,0.8)"
   size="medium"
