--- a/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
+++ b/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
@@ -113,7 +113,7 @@
         <button (click)="back($event, 'infor-contract-batch')" type="button" name="next" class="next action-button"
             style="background-color: #8B8B8B">Quay lại</button>
         <div>
-            <button (click)="next()" type="button" name="next" class="next action-button">Hoàn thành</button>
+            <button (click)="submit()" type="button" name="next" class="next action-button">Hoàn thành</button>
         </div>
     </div>
   
