--- a/src/app/main/contract/form-contract/confirm-contract-form/confirm-contract-form.component.html
+++ b/src/app/main/contract/form-contract/confirm-contract-form/confirm-contract-form.component.html
@@ -140,7 +140,7 @@
     <div class="content_footer"></div>
     <div>
         <button type="button" name="next" class="next draft-button" (click)="SaveContract('saveDraft_contract')">Lưu nháp</button>
-        <button (click)="SaveContract('finish_contract')" type="button" name="next" class="next action-button pull-right">Hoàn thành</button>
+        <button (click)="submit('finish_contract')" type="button" name="next" class="next action-button pull-right">Hoàn thành</button>
     </div>
 </div>
 
