sua label hoan thanh voi ceca

--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -29,7 +29,7 @@
           </div>
           <div class="row">
             <div class="col-md-12 item_contract_infor">{{'contract.status.v2' | translate}}:
-              <span class="status_blue">{{item.contractStatus | pipe | translate}}</span>
+              <span class="status_blue">{{item.contractStatus | pipe | translate}} {{getNameStatusCeca(item.contractStatus, item.contractCecaPush, item.contractCecaStatus) | translate}}</span>
             </div>
           </div>
           <div class="row">
@@ -90,7 +90,7 @@
           </div>
           <div class="row">
             <div class="col-md-12 item_contract_infor">{{'contract.status' | translate}}:
-              <span class="status_blue">{{'contract.status.complete' | translate}}</span>
+              <span class="status_blue">{{'contract.status.complete' | translate}} {{getNameStatusCeca(item.status, item.ceca_push, item.ceca_status) | translate}}</span>
             </div>
           </div>
         </div>
@@ -123,7 +123,7 @@
           </div>
           <div class="row">
             <div class="col-md-12 item_contract_infor">{{'contract.status' | translate}}:
-              <span class="status_blue">{{item.status | pipe | translate}}</span>
+              <span class="status_blue">{{item.status | pipe | translate}}  {{getNameStatusCeca(item.status, item.ceca_push, item.ceca_status) | translate}}</span>
             </div>
           </div>
         </div>
