deny delete unit when it activated

--- a/src/app/admin/admin-main/admin-unit/admin-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-unit.component.html
@@ -98,7 +98,7 @@
               style="cursor: pointer"
             />&nbsp;&nbsp;
             <img
-              *ngIf="this.deleteUnitRole === true"
+              *ngIf="list.status != 'ACTIVE' && this.deleteUnitRole === true"
               src="../../../assets/img/icon_delete.svg"
               (click)="deleteUnit(list.id)"
               width="16px"
